# wrangler

./: CMakeLists.txt  README.md  main.cpp  run.sh
include/: animal.hpp  buildings.hpp  collectables.hpp  physics.hpp  player.h  player.hpp  render_utils.hpp  terrain.hpp  utils.hpp
resources/models/: character.glb  grass_blade.glb
resources/shaders/: dof.fs  grass.fs  grass.vs  lighting.fs
src/: animal.cpp  animal.h  buildings.cpp  buildings.h  collectables.cpp  main.cpp  physics.cpp  physics.h  player.cpp  player.h  render_utils.cpp  render_utils.h  terrain.cpp  utils.cpp  utils.h
